--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
   </head>
   <body>
-    <p>My cart</p>
+    <p>My cart !!!</p>
   </body>
 </html>
