--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
             }
         },
         sendText(spam) {
-            const textField = document.querySelector('#text_field');
+            const textField = document.querySelector('regular_field');
             const text      = textField.value;
             if (!text.length) {
                 return textField.focus();
