--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     </style>
 </head>
 
-<body class="" style="visibility: hidden;">
+<body>
 
 <section id="top_sect" class="second">
     <button id="main_btn" onclick="DemoApp.sendMessage('');">Send «Hello, World!»</button>
@@ -463,11 +463,7 @@
         },
 
         // actions
-        sendMessage(msg_id, with_webview) {
-            if (!DemoApp.initDataUnsafe.query_id) {
-                alert('WebViewQueryId not defined');
-                return;
-            }
+        
 
             document.querySelectorAll('button').forEach((btn) => btn.disabled = true);
 
