--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
                 setTimeout(() => {
                     btnStatus.textContent = 'Message sent successfully!';
                 }, 1000);
+            },
+
+            // Alerts
+            showAlert(message) {
+                Telegram.WebApp.showAlert(message);
+            },
+            showConfirm(message) {
+                Telegram.WebApp.showConfirm(message);
             }
         };
 
@@ -60,6 +68,19 @@
     <button id="send_message_btn" onclick="DemoApp.sendMessage();">Send Message</button>
     <div id="btn_status" style="display:none;"></div>
     <div contenteditable="true" id="text_field" placeholder="Input text here..."></div>
+
+    <p>Test alerts:</p>
+    <div class="columns">
+        <ul>
+            <li><a href="javascript:;" onclick="alert('Hello!');">alert</a></li>
+            <li><a href="javascript:;" onclick="confirm('Are you sure?');">confirm</a></li>
+            <li><a href="javascript:;" onclick="prompt('How old are you?');">prompt</a></li>
+        </ul>
+        <ul>
+            <li><a href="javascript:;" onclick="DemoApp.showAlert('Hello!');">showAlert</a></li>
+            <li><a href="javascript:;" onclick="DemoApp.showConfirm('Are you sure?');">showConfirm</a></li>
+        </ul>
+    </div>
 </section>
 </body>
 </html>
