--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             // Setup Main Button
             Telegram.WebApp.MainButton.setParams({
-                text: 'SEND TEXT AND CLOSE WEBVIEW',
+                text: 'Отправить',
                 is_visible: true
             }).onClick(DemoApp.sendTextAndClose);
         });
@@ -55,7 +55,7 @@
 </head>
 <body style="visibility: hidden;">
 <section>
-    <div contenteditable="true" id="text_field" placeholder="Input text here..."></div>
+    <div contenteditable="true" id="text_field" placeholder="Введите число..."></div>
 </section>
 </body>
 </html>
