--- a/index.html
+++ b/index.html
@@ -18,9 +18,17 @@
                 const textField = document.querySelector('#text_field');
                 const errorField = document.querySelector('#error_message');
                 const text = textField.textContent.trim();
+
+                // Ensure the input is numeric
+                if (!/^\d+$/.test(text)) {
+                    errorField.textContent = 'Please enter a valid integer.';
+                    errorField.style.display = 'block';
+                    return;
+                }
+
                 const number = parseInt(text);
 
-                if (!Number.isInteger(number) || number < 1 || number > 10000) {
+                if (number < 1 || number > 10000) {
                     errorField.textContent = 'Please enter an integer between 1 and 10000.';
                     errorField.style.display = 'block';
                     return;
@@ -41,6 +49,15 @@
                 text: 'SEND TEXT AND CLOSE WEBVIEW',
                 is_visible: true
             }).onClick(DemoApp.sendTextAndClose);
+
+            // Restrict input to numeric characters only
+            const textField = document.querySelector('#text_field');
+            textField.addEventListener('input', (e) => {
+                const text = textField.textContent;
+                if (!/^\d*$/.test(text)) {
+                    textField.textContent = text.replace(/[^\d]/g, '');
+                }
+            });
         });
     </script>
     <style>
