--- a/index11.html
+++ b/index11.html
@@ -1,44 +1,107 @@
-sendMessage(msg_id, with_webview) {
-    if (!DemoApp.initDataUnsafe.query_id) {
-        alert('WebViewQueryId not defined');
-        return;
-    }
-
-    document.querySelectorAll('button').forEach((btn) => btn.disabled = true);
-
-    const btn = document.querySelector('#btn_status');
-    btn.textContent = 'Sending...';
-
-    const message = {
-        chat_id: DemoApp.initDataUnsafe.user_id, // Replace with the actual chat_id or user_id
-        text: 'Hello, World!' // Replace with the actual message
-    };
-
-    fetch('/send-message', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(message),
-    })
-    .then(response => response.json())
-    .then(data => {
-        document.querySelectorAll('button').forEach((btn) => btn.disabled = false);
-
-        if (data.ok) {
-            btn.textContent = 'Message sent successfully!';
-            btn.className = 'ok';
-            btn.style.display = 'block';
-        } else {
-            btn.textContent = data.description;
-            btn.className = 'err';
-            btn.style.display = 'block';
-            alert(data.description);
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Telegram Web App Demo</title>
+    <script src="https://telegram.org/js/telegram-web-app.js?1"></script>
+    <script>
+        function setThemeClass() {
+            document.documentElement.className = Telegram.WebApp.colorScheme;
         }
-    })
-    .catch(error => {
-        document.querySelectorAll('button').forEach((btn) => btn.disabled = false);
-        btn.textContent = 'Unknown error';
-        btn.className = 'err';
-        btn.style.display = 'block';
-        alert('Unknown error');
-    });
-}
+
+        Telegram.WebApp.onEvent('themeChanged', setThemeClass);
+        setThemeClass();
+
+        const DemoApp = {
+            sendTextAndClose() {
+                const textField = document.querySelector('#text_field');
+                const errorField = document.querySelector('#error_message');
+                const text = textField.textContent.trim();
+
+                // Ensure the input is numeric
+                if (!/^\d+$/.test(text)) {
+                    errorField.textContent = 'Please enter a valid integer.';
+                    errorField.style.display = 'block';
+                    return;
+                }
+
+                const number = parseInt(text);
+
+                if (number < 1 || number > 10000) {
+                    errorField.textContent = 'Please enter an integer between 1 and 10000.';
+                    errorField.style.display = 'block';
+                    return;
+                }
+
+                errorField.style.display = 'none';
+                Telegram.WebApp.sendData(number.toString());
+                Telegram.WebApp.close();
+            }
+        };
+
+        document.addEventListener('DOMContentLoaded', () => {
+            document.body.style.visibility = '';
+            Telegram.WebApp.ready();
+
+            // Setup Main Button
+            Telegram.WebApp.MainButton.setParams({
+                text: 'SEND TEXT AND CLOSE WEBVIEW',
+                is_visible: true
+            }).onClick(DemoApp.sendTextAndClose);
+
+            // Restrict input to numeric characters only
+            const textField = document.querySelector('#text_field');
+            textField.addEventListener('input', (e) => {
+                const text = textField.textContent;
+                if (!/^\d*$/.test(text)) {
+                    textField.textContent = text.replace(/[^\d]/g, '');
+                }
+            });
+        });
+    </script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+
+        section {
+            margin-top: 20px;
+        }
+
+        label {
+            font-size: 18px;
+            color: #2196F3;
+        }
+
+        #text_field {
+            border: none;
+            border-bottom: 2px solid #2196F3;
+            padding: 10px;
+            margin-top: 10px;
+            font-size: 24px;
+            outline: none;
+            display: block;
+            width: 100%;
+        }
+
+        #text_field:focus {
+            border-bottom-color: #2196F3;
+        }
+
+        #error_message {
+            color: red;
+            display: none;
+            margin-top: 10px;
+        }
+    </style>
+</head>
+<body style="visibility: hidden;">
+<section>
+    <label for="text_field">Postcode</label>
+    <div contenteditable="true" id="text_field" placeholder="Enter number here">1</div>
+    <div id="error_message"></div>
+</section>
+</body>
+</html>
