--- a/index.html
+++ b/index.html
@@ -2,14 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta name="format-detection" content="telephone=no"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="MobileOptimized" content="176"/>
-    <meta name="HandheldFriendly" content="True"/>
-    <meta name="robots" content="noindex,nofollow"/>
-    <title>Telegram Web App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Telegram Web App Demo</title>
     <script src="https://telegram.org/js/telegram-web-app.js?1"></script>
     <script>
         function setThemeClass() {
@@ -18,95 +12,96 @@
 
         Telegram.WebApp.onEvent('themeChanged', setThemeClass);
         setThemeClass();
+
+        const DemoApp = {
+            sendTextAndClose() {
+                const textField = document.querySelector('#text_field');
+                const errorField = document.querySelector('#error_message');
+                const text = textField.textContent.trim();
+
+                // Ensure the input is numeric
+                if (!/^\d+$/.test(text)) {
+                    errorField.textContent = 'Please enter a valid integer.';
+                    errorField.style.display = 'block';
+                    return;
+                }
+
+                const number = parseInt(text);
+
+                if (number < 1 || number > 10000) {
+                    errorField.textContent = 'Please enter an integer between 1 and 10000.';
+                    errorField.style.display = 'block';
+                    return;
+                }
+
+                errorField.style.display = 'none';
+                Telegram.WebApp.sendData(number.toString());
+                Telegram.WebApp.close();
+            }
+        };
+
+        document.addEventListener('DOMContentLoaded', () => {
+            document.body.style.visibility = '';
+            Telegram.WebApp.ready();
+
+            // Setup Main Button
+            Telegram.WebApp.MainButton.setParams({
+                text: 'SEND TEXT AND CLOSE WEBVIEW',
+                is_visible: true
+            }).onClick(DemoApp.sendTextAndClose);
+
+            // Restrict input to numeric characters only
+            const textField = document.querySelector('#text_field');
+            textField.addEventListener('input', (e) => {
+                const text = textField.textContent;
+                if (!/^\d*$/.test(text)) {
+                    textField.textContent = text.replace(/[^\d]/g, '');
+                }
+            });
+        });
     </script>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: var(--bg-color);
+            padding: 20px;
         }
-        #btn_status.ok {
-            color: green;
+
+        section {
+            margin-top: 20px;
         }
-        #btn_status.err {
+
+        label {
+            font-size: 18px;
+            color: #2196F3;
+        }
+
+        #text_field {
+            border: none;
+            border-bottom: 2px solid #2196F3;
+            padding: 10px;
+            margin-top: 10px;
+            font-size: 24px;
+            outline: none;
+            display: block;
+            width: 100%;
+        }
+
+        #text_field:focus {
+            border-bottom-color: #2196F3;
+        }
+
+        #error_message {
             color: red;
+            display: none;
+            margin-top: 10px;
         }
     </style>
 </head>
-
 <body style="visibility: hidden;">
-<section id="top_sect">
-    <button id="main_btn" onclick="DemoApp.sendMessage('');">Send «Hello, World!»</button>
-    <button id="with_webview_btn" onclick="DemoApp.sendMessage('', true);">Send «Hello, World!» with inline webview button</button>
-    <div id="btn_status" class="hint" style="display: none;"></div>
+<section>
+    <label for="text_field">Postcode</label>
+    <div contenteditable="true" id="text_field" placeholder="Enter number here">1</div>
+    <div id="error_message"></div>
 </section>
-
-<script type="application/javascript">
-    const DemoApp = {
-        initData      : Telegram.WebApp.initData || '',
-        initDataUnsafe: Telegram.WebApp.initDataUnsafe || {},
-        MainButton    : Telegram.WebApp.MainButton,
-
-        init() {
-            document.body.style.visibility = '';
-            Telegram.WebApp.ready();
-            Telegram.WebApp.MainButton.setParams({
-                text      : 'CLOSE WEBVIEW',
-                is_visible: true
-            }).onClick(DemoApp.close);
-        },
-        close() {
-            Telegram.WebApp.close();
-        },
-        sendMessage(msg_id, with_webview) {
-            if (!DemoApp.initDataUnsafe.query_id) {
-                alert('WebViewQueryId not defined');
-                return;
-            }
-
-            document.querySelectorAll('button').forEach((btn) => btn.disabled = true);
-
-            const btn = document.querySelector('#btn_status');
-            btn.textContent = 'Sending...';
-
-            const message = {
-                chat_id: DemoApp.initDataUnsafe.user_id, // Replace with the actual chat_id or user_id
-                text: 'Hello, World!' // Replace with the actual message
-            };
-
-            fetch('/send-message', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify(message),
-            })
-            .then(response => response.json())
-            .then(data => {
-                document.querySelectorAll('button').forEach((btn) => btn.disabled = false);
-
-                if (data.ok) {
-                    btn.textContent = 'Message sent successfully!';
-                    btn.className = 'ok';
-                    btn.style.display = 'block';
-                } else {
-                    btn.textContent = data.description;
-                    btn.className = 'err';
-                    btn.style.display = 'block';
-                    alert(data.description);
-                }
-            })
-            .catch(error => {
-                document.querySelectorAll('button').forEach((btn) => btn.disabled = false);
-                btn.textContent = 'Unknown error';
-                btn.className = 'err';
-                btn.style.display = 'block';
-                alert('Unknown error');
-            });
-        }
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-        DemoApp.init();
-    });
-</script>
-
 </body>
 </html>
