--- a/quantity.html
+++ b/quantity.html
@@ -58,6 +58,9 @@
                     textField.textContent = text.replace(/[^\d]/g, '');
                 }
             });
+
+            // Устанавливаем фокус на поле ввода
+            textField.focus();
         });
     </script>
     <style>
