--- a/quantity.html
+++ b/quantity.html
@@ -59,8 +59,11 @@
                 }
             });
 
-            // Устанавливаем фокус на поле ввода
-            textField.focus();
+            // Устанавливаем фокус на поле ввода с задержкой
+            setTimeout(() => {
+                textField.focus();
+                textField.click(); // Принудительно имитируем клик для открытия клавиатуры
+            }, 100); // Задержка в 100 миллисекунд
         });
     </script>
     <style>
