--- a/registration.html
+++ b/registration.html
@@ -29,14 +29,30 @@
                 // Validate email
                 const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
                 if (!emailRegex.test(email)) {
-                    errorField.textContent = 'Пожалуйста, введите корректный адрес электронной почты';
+                    errorField.textContent = 'Пожалуйста, введите корректный адрес электронной почты.';
+                    errorField.style.display = 'block';
+                    return;
+                }
+
+                // Validate name
+                const nameRegex = /^[А-ЯЁа-яёA-Za-z\s]+$/;
+                if (!nameRegex.test(name)) {
+                    errorField.textContent = 'Пожалуйста, введите корректное имя (только буквы и пробелы).';
+                    errorField.style.display = 'block';
+                    return;
+                }
+
+                // Validate phone number
+                const phoneRegex = /^(\+?\d{1,3}[-.\s]?)?(\(?\d{1,4}\)?[-.\s]?)?\d{1,4}[-.\s]?\d{1,4}[-.\s]?\d{1,9}$/;
+                if (!phoneRegex.test(phone)) {
+                    errorField.textContent = 'Пожалуйста, введите корректный номер телефона.';
                     errorField.style.display = 'block';
                     return;
                 }
 
                 // Validate other fields
-                if (!org || !name || !phone) {
-                    errorField.textContent = 'Пожалуйста, заполните все поля.';
+                if (!org) {
+                    errorField.textContent = 'Пожалуйста, заполните поле организации.';
                     errorField.style.display = 'block';
                     return;
                 }
@@ -135,16 +151,16 @@
 </head>
 <body style="visibility: hidden;">
 <section>
-    <label for="email_field">Электронная почта</label>
+    <label for="email_field">Электронная почта *</label>
     <div contenteditable="true" id="email_field" class="input_field"></div>
 
-    <label for="name_field">Имя</label>
+    <label for="name_field">Имя *</label>
     <div contenteditable="true" id="name_field" class="input_field"></div>
 
     <label for="phone_field">Телефон *</label>
     <div contenteditable="true" id="phone_field" class="input_field"></div>
 
-	    <label for="org_field">Организация *</label>
+    <label for="org_field">Организация *</label>
     <div contenteditable="true" id="org_field" class="input_field"></div>
 
     <div id="error_message"></div>
