--- a/registration.html
+++ b/registration.html
@@ -35,7 +35,7 @@
                 }
 
                 // Validate name
-                const nameRegex = /^[А-ЯЁа-яёA-Za-z\s]+$/;
+                const nameRegex = /^[А-Яа-яA-Za-z\s]+$/;
                 if (!nameRegex.test(name)) {
                     errorField.textContent = 'Пожалуйста, введите корректное имя (только буквы и пробелы).';
                     errorField.style.display = 'block';
@@ -43,7 +43,7 @@
                 }
 
                 // Validate phone number
-                const phoneRegex = /^(\+?\d{1,3}[-.\s]?)?(\(?\d{1,4}\)?[-.\s]?)?\d{1,4}[-.\s]?\d{1,4}[-.\s]?\d{1,9}$/;
+                const phoneRegex = /^\+7\d{10}$/;
                 if (!phoneRegex.test(phone)) {
                     errorField.textContent = 'Пожалуйста, введите корректный номер телефона.';
                     errorField.style.display = 'block';
