--- a/registration.html
+++ b/registration.html
@@ -127,7 +127,7 @@
         }
 
         #email_field:empty:before {
-            content: 'your.email@example.com';
+            content: 'your.email@example.ru';
         }
 
         #org_field:empty:before {
@@ -139,7 +139,7 @@
         }
 
         #phone_field:empty:before {
-            content: '+79161234567';
+            content: '+79876543210';
         }
 
         #error_message {
