--- a/registration.html
+++ b/registration.html
@@ -43,7 +43,8 @@
                 }
 
                 // Validate phone number
-                const phoneRegex = /^\+?\d{1,4}[-\s]?\d{3}[-\s]?\d{3}[-\s]?\d{2}[-\s]?\d{2}$/;
+                //const phoneRegex = /^\+?\d{1,4}[-\s]?\d{3}[-\s]?\d{3}[-\s]?\d{2}[-\s]?\d{2}$/;
+                const phoneRegex = /^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{10}$/;
                 if (!phoneRegex.test(phone)) {
                     errorField.textContent = 'Пожалуйста, введите корректный номер телефона.';
                     errorField.style.display = 'block';
