--- a/registration.html
+++ b/registration.html
@@ -44,7 +44,7 @@
 
                 // Validate phone number
                 //const phoneRegex = /^\+?\d{1,4}[-\s]?\d{3}[-\s]?\d{3}[-\s]?\d{2}[-\s]?\d{2}$/;
-                const phoneRegex = /^((8|\+7)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{10}$/;
+                const phoneRegex = /^((\+7|\+8|7|8)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{10}$/;
                 if (!phoneRegex.test(phone)) {
                     errorField.textContent = 'Пожалуйста, введите корректный номер телефона.';
                     errorField.style.display = 'block';
