--- a/registration.html
+++ b/registration.html
@@ -19,12 +19,18 @@
                 const orgField = document.querySelector('#org_field');
                 const nameField = document.querySelector('#name_field');
                 const phoneField = document.querySelector('#phone_field');
+                const cityField = document.querySelector('#city_field');
+                const activityField = document.querySelector('#activity_field');
+                const commentField = document.querySelector('#comment_field');
                 const errorField = document.querySelector('#error_message');
 
                 const email = emailField.textContent.trim();
                 const org = orgField.textContent.trim();
                 const name = nameField.textContent.trim();
                 const phone = phoneField.textContent.trim();
+                const city = cityField.textContent.trim();
+                const activity = activityField.value.trim();
+                const comment = commentField.textContent.trim();
 
                 // Validate email
                 const emailRegex = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
@@ -43,7 +49,6 @@
                 }
 
                 // Validate phone number
-                //const phoneRegex = /^\+?\d{1,4}[-\s]?\d{3}[-\s]?\d{3}[-\s]?\d{2}[-\s]?\d{2}$/;
                 const phoneRegex = /^((\+7|\+8|7|8)[\- ]?)?(\(?\d{3}\)?[\- ]?)?[\d\- ]{10}$/;
                 if (!phoneRegex.test(phone)) {
                     errorField.textContent = 'Пожалуйста, введите корректный номер телефона.';
@@ -51,7 +56,7 @@
                     return;
                 }
 
-                // Validate other fields
+                // Validate other required fields
                 if (!org) {
                     errorField.textContent = 'Пожалуйста, заполните поле организации.';
                     errorField.style.display = 'block';
@@ -64,7 +69,10 @@
                     email: email,
                     organization: org,
                     name: name,
-                    phone: phone
+                    phone: phone,
+                    city: city,
+                    activity: activity,
+                    comment: comment
                 };
 
                 Telegram.WebApp.sendData(JSON.stringify(data));
@@ -143,26 +151,64 @@
             content: '+79876543210';
         }
 
+        #city_field:empty:before {
+            content: 'Москва';
+        }
+
+        #comment_field:empty:before {
+            content: 'Ваш комментарий';
+        }
+
         #error_message {
             color: red;
             display: none;
             margin-top: 10px;
         }
+
+        select {
+            width: 100%;
+            font-size: 24px;
+            padding: 10px;
+            margin-top: 5px;
+            border: none;
+            border-bottom: 2px solid #2196F3;
+            outline: none;
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+        }
     </style>
 </head>
 <body style="visibility: hidden;">
 <section>
-    <label for="email_field">Электронная почта *</label>
-    <div contenteditable="true" id="email_field" class="input_field"></div>
-
-    <label for="name_field">Имя *</label>
+    <label for="name_field">ФИО *</label>
     <div contenteditable="true" id="name_field" class="input_field"></div>
 
     <label for="phone_field">Телефон *</label>
     <div contenteditable="true" id="phone_field" class="input_field"></div>
 
-    <label for="org_field">Организация *</label>
+    <label for="email_field">Электронная почта *</label>
+    <div contenteditable="true" id="email_field" class="input_field"></div>
+
+    <label for="org_field">Юрлицо или ИП *</label>
     <div contenteditable="true" id="org_field" class="input_field"></div>
+
+    <label for="city_field">Город</label>
+    <div contenteditable="true" id="city_field" class="input_field"></div>
+
+    <label for="activity_field">Направление деятельности</label>
+    <select id="activity_field" class="input_field">
+        <option value="">Выберите направление</option>
+        <option value="дилер">Дилер</option>
+        <option value="гостиница">Гостиница</option>
+        <option value="ресторан">Ресторан</option>
+        <option value="кафе">Кафе</option>
+        <option value="бар">Бар</option>
+        <option value="другое">Другое</option>
+    </select>
+
+    <label for="comment_field">Комментарий</label>
+    <div contenteditable="true" id="comment_field" class="input_field"></div>
 
     <div id="error_message"></div>
 </section>
