--- a/registration.html
+++ b/registration.html
@@ -198,6 +198,7 @@
     <select id="activity_field" class="input_field">
         <option value="">Выберите направление</option>
         <option value="дилер">Дилер</option>
+        <option value="магазин">Магазин</option>
         <option value="гостиница">Гостиница</option>
         <option value="ресторан">Ресторан</option>
         <option value="кафе">Кафе</option>
