--- a/registration.html
+++ b/registration.html
@@ -189,7 +189,7 @@
 </head>
 <body style="visibility: hidden;">
 <section>
-    <label for="name_field">ФИО *</label>
+    <label for="name_field">Имя *</label>
     <div contenteditable="true" id="name_field" class="input_field"></div>
 
     <label for="phone_field">Телефон *</label>
@@ -198,7 +198,7 @@
     <label for="email_field">Электронная почта *</label>
     <div contenteditable="true" id="email_field" class="input_field"></div>
 
-    <label for="org_field">Организация *</label>
+    <label for="org_field">Название организации *</label>
     <div contenteditable="true" id="org_field" class="input_field"></div>
 
     <label for="activity_field">Направление деятельности</label>
@@ -216,7 +216,7 @@
     <label for="city_field">Город</label>
     <div contenteditable="true" id="city_field" class="input_field"></div>
 
-    <label for="address_field">Адрес</label>
+    <label for="address_field">Адрес доставки</label>
     <div contenteditable="true" id="address_field" class="input_field"></div>
 
     <label for="comment_field">Комментарий</label>
