--- a/registration.html
+++ b/registration.html
@@ -198,7 +198,7 @@
     <label for="email_field">Электронная почта *</label>
     <div contenteditable="true" id="email_field" class="input_field"></div>
 
-    <label for="org_field">Название организации *</label>
+    <label for="org_field">Организация *</label>
     <div contenteditable="true" id="org_field" class="input_field"></div>
 
     <label for="activity_field">Направление деятельности</label>
