--- a/registration.html
+++ b/registration.html
@@ -192,14 +192,14 @@
     <label for="name_field">Имя *</label>
     <div contenteditable="true" id="name_field" class="input_field"></div>
 
+    <label for="org_field">Организация *</label>
+    <div contenteditable="true" id="org_field" class="input_field"></div>
+
     <label for="phone_field">Телефон *</label>
     <div contenteditable="true" id="phone_field" class="input_field"></div>
 
     <label for="email_field">Электронная почта *</label>
     <div contenteditable="true" id="email_field" class="input_field"></div>
-
-    <label for="org_field">Организация *</label>
-    <div contenteditable="true" id="org_field" class="input_field"></div>
 
     <label for="activity_field">Направление деятельности</label>
     <select id="activity_field" class="input_field">
@@ -213,10 +213,10 @@
         <option value="другое">Другое</option>
     </select>
 
-    <label for="city_field">Город</label>
+    <label for="city_field">Город *</label>
     <div contenteditable="true" id="city_field" class="input_field"></div>
 
-    <label for="address_field">Адрес доставки</label>
+    <label for="address_field">Адрес доставки *</label>
     <div contenteditable="true" id="address_field" class="input_field"></div>
 
     <label for="comment_field">Комментарий</label>
