--- a/registration.html
+++ b/registration.html
@@ -79,7 +79,7 @@
                     return;
                 }
 
-                // No validation required for city, address, activity, and comment
+                // No validation required for activity, and comment
                 errorField.style.display = 'none';
 
                 const data = {
